@@ -42,10 +42,12 @@ id = siemens_tc35
 name = "Siemens TC35"
 detect-string = "SIEMENS"
 detect-string2 = "TC35"
-init-string = "AT+CNMI=1,2,0,1,1"
+init-string = "AT+CNMI=3,2,0,1,1"
 speed = 19200
 enable-hwhs = "AT\\Q3"
 need-sleep = true
+reset-string = "AT+CFUN=1"
+keepalive-cmd = "AT+CSQ"
 
 group = modems
 id = siemens_m20
